<resources>
    <string name="app_name">SoLoud</string>
    <string name="facebook_app_id">1625319744433880</string>
    <string name="fb_login_protocol_scheme">fb1625319744433880</string>
    <string name="nothing" />
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to Logout?</string>
    <string name="cancel">Cancel</string>
    <string name="preference_file_key">com.android.soloud.prefs</string>
    <string name="title_activity_advertisement_details">Advertisement Details</string>
    <string name="advertisement_description">Description</string>
    <string name="dialog_title_post_validation">Post Validation</string>
    <string name="dialog_description_post_validation">The post will be published after SoLoud validation. Thank you!</string>
    <string name="post_sent">Post sent for revision</string>
    <string name="permission_camera_and_storage_rationale">Camera and Write Storage permissions are needed to capture photos.</string>
    <string name="permission_read_storage_rationale">Read Storage permission is needed to choose photos.</string>
    <string name="description_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam in turpis viverra, elementum sapien eget, consequat felis. Quisque posuere orci porta sapien pharetra, at facilisis sapien ullamcorper. Cras ante nisl, bibendum et dui nec, blandit hendrerit elit.</string>
    <string name="title_contests">Contests</string>
    <string name="title_post">Post Preview</string>
    <string name="suggested_hashtags">Suggested hashtags</string>
    <string name="ok">OK</string>
    <string name="enter_your_hashtag">Enter your hashtags</string>
    <string name="next">Next</string>
    <string name="description">Say something about this photo&#8230;</string>
    <string name="hashTags_label">Hashtags</string>
    <string name="post">Post</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="action_settings">Settings</string>
    <string name="permission_granted">Permission has been granted</string>
    <string name="permission_not_granted">Permission was not granted</string>
    <string name="share_to_facebook">Share to Facebook</string>
    <string name="success_post_for_revision">Post sent for revision. Thank you!</string>
    <string name="error_no_internet_connection">No internet connection</string>
    <string name="retry">Retry</string>
    <string name="error_login">Could not login to SoLoud</string>
    <string name="error_requesting_contests">Could not load contests</string>
    <string name="error_login_facebook">Facebook login attempt failed</string>
    <string name="cancel_login_facebook">Facebook login attempt canceled</string>
    <string name="please_try_again">Please try again</string>
    <string name="terms_and_privacy_policy"><![CDATA[By signing up, you agree to our
        <u>Terms</u> & <u>Privacy Policy</u>.]]></string>
    <string name="loading">Loading..</string>
    <string name="promo_text">Sign up and be the face \n of famous brands</string>
    <string name="unlock_trainings">Make posts to unlock trainings</string>
    <string name="training_title_framing_composition">Framing and Composition</string>
    <string name="training_title_colors_1">Colors 1</string>
    <string name="training_title_colors_2">Colors 2</string>
    <string name="training_title_typography">Typography is an art</string>
    <string name="training_title_editing_basics">Editing- Basics</string>
    <string name="training_title_hash_tags_1">Each day has its own Tags 1</string>
    <string name="training_title_hash_tags_2">Each day has its own Tags 2</string>
    <string name="training_title_story">Put a story behind the image</string>
    <string name="training_narration_1">Narration 1</string>
    <string name="training_narration_2">Narration 2</string>
    <string name="check_in">Check In</string>
    <string name="wizard_0_description">Pick a contest category</string>
    <string name="wizard_1_description">Choose a contest to participate</string>
    <string name="wizard_2_description">Add your photo!</string>
    <string name="wizard_3_description">Add some tags and you are done!</string>
    <string name="profile">Profile</string>
    <string name="permission_prompt_location">Soloud requires location access to search for nearby places.</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="place_field_about">About</string>
    <string name="place_field_address">Address</string>
    <string name="place_field_app_link">App Link</string>
    <string name="place_field_categories">Categories</string>
    <string name="place_field_checkins">Checkins</string>
    <string name="place_field_description">Description</string>
    <string name="place_field_engagement">Engagement</string>
    <string name="place_field_hours">Business hours</string>
    <string name="place_field_link">Link</string>
    <string name="place_field_parking">Parking</string>
    <string name="place_field_payment_options">Payment options</string>
    <string name="place_field_phone">Phone</string>
    <string name="place_field_price_range">Price range</string>
    <string name="place_field_rating">Rating</string>
    <string name="place_field_rating_count">Rating count</string>
    <string name="place_field_specialties">Specialties</string>
    <string name="place_field_services">Services</string>
    <string name="place_field_website">Website</string>
    <string name="location_error_disabled">Location services are disabled. Enable location services to use this application.</string>
    <string name="location_error_unknown">An error has occurred retrieving the current location.</string>
    <string name="place_info_checkins">%1$d checkins</string>
    <string name="place_info_is_permanently_closed">Permanently closed</string>
    <string name="place_info_parking_lot">Parking lot</string>
    <string name="place_info_parking_street">Street</string>
    <string name="place_info_parking_valet">Valet</string>
    <string name="place_info_rating">%1$s stars (%2$d ratings)</string>
    <string name="place_info_fan_count">%1$d fans</string>
    <string name="place_always_open">This place is open 24H</string>
    <string name="place_permanently_closed">This place is permanently closed</string>
    <string name="place_app_link">Open this place in Facebook</string>
    <string name="cancelled">Cancelled</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error">Error</string>
    <string name="exception">Exception: %1$s</string>
    <string name="permission_prompt_call_phone">This sample app requires permission to place a phone call.</string>
    <string name="current_place">Current place</string>
    <string name="add_my_location">Add my location</string>
    <string name="find_location_hint">Find a location</string>
    <string name="add_location">Add Location</string>
    <string name="post_preview">Post preview</string>
    <string name="likes">Likes</string>
    <string name="shares">Shares</string>
    <string name="comments">Comments</string>
    <string name="total_statistics">Total statistics</string>
    <string name="location_message">Your GPS seems to be disabled. Please enable it to proceed the post process!</string>
    <string name="categories_description">Choose a category of products you want to promote.</string>
    <string name="got_it">GOT IT</string>
    <string name="welcome_to_soloud">Welcome to SoLoud!</string>
    <string name="contests_description">These are the currently open contests. In every contest you can see the promoted product and the maximum participations left until the contest expires </string>
    <string name="contest_details_1">Here you can see how a post is suggested to look like in order to take part in the contest</string>
    <string name="contest_details_2">Start by adding your image!</string>
    <string name="add_hashtags">Add your hashtags</string>
    <string name="choose_from_suggested_hashtags">Choose from the suggested</string>
    <string name="add_description">Write a description</string>
</resources>