<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_advertisement_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.android.soloud.contestDetails.ContestDetails">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/prize_IV"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="#000000"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:scaleType="centerInside" />

            <TextView
                android:id="@+id/advertisement_description_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/prize_IV"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/advertisement_description"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/prize_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/advertisement_description_label"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                tools:text="@string/description_content" />

            <TextView
                android:id="@+id/prize_hash_tags_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/prize_description"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/hashTags_label"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/hashTags_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/prize_hash_tags_label"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="90dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="90dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                tools:text="#Lorem" />


            <com.github.clans.fab.FloatingActionMenu
                android:id="@+id/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                fab:menu_animationDelayPerItem="50"
                fab:menu_backgroundColor="@android:color/transparent"
                fab:menu_buttonSpacing="0dp"
                fab:menu_colorNormal="@color/colorPrimary"
                fab:menu_colorPressed="@color/colorPrimaryDark"
                fab:menu_colorRipple="#99FFFFFF"
                fab:menu_fab_size="normal"
                fab:menu_icon="@drawable/fab_add"
                fab:menu_labels_colorNormal="#333333"
                fab:menu_labels_colorPressed="#444444"
                fab:menu_labels_colorRipple="#66FFFFFF"
                fab:menu_labels_cornerRadius="3dp"
                fab:menu_labels_ellipsize="none"
                fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
                fab:menu_labels_margin="0dp"
                fab:menu_labels_maxLines="-1"
                fab:menu_labels_padding="8dp"
                fab:menu_labels_paddingBottom="4dp"
                fab:menu_labels_paddingLeft="8dp"
                fab:menu_labels_paddingRight="8dp"
                fab:menu_labels_paddingTop="4dp"
                fab:menu_labels_position="left"
                fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
                fab:menu_labels_showShadow="true"
                fab:menu_labels_singleLine="false"
                fab:menu_labels_textColor="#FFFFFF"
                fab:menu_labels_textSize="14sp"
                fab:menu_openDirection="up"
                fab:menu_shadowColor="#66000000"
                fab:menu_shadowRadius="4dp"
                fab:menu_shadowXOffset="1dp"
                fab:menu_shadowYOffset="3dp"
                fab:menu_showShadow="true">

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/menu_item_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_camera_white_18dp"
                    fab:fab_colorNormal="@color/mySecondary"
                    fab:fab_colorPressed="@color/mySecondary"
                    fab:fab_label="Camera"
                    fab:fab_size="mini" />

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/menu_item_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_collections_white_18dp"
                    fab:fab_colorNormal="@color/mySecondary"
                    fab:fab_colorPressed="@color/mySecondary"
                    fab:fab_label="Gallery"
                    fab:fab_size="mini" />

            </com.github.clans.fab.FloatingActionMenu>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/wizard_RL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/tutorial_background"
            android:visibility="gone"
            tools:visibility="visible">

            <RelativeLayout
                android:id="@+id/message_1_RL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <RelativeLayout
                    android:id="@+id/bubble_1_RL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@android:color/white"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/description_1_TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contest_details_1"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                </RelativeLayout>

                <View
                    android:id="@+id/triangle_1_View"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_below="@id/bubble_1_RL"
                    android:layout_marginLeft="36dp"
                    android:layout_marginStart="36dp"
                    android:background="@drawable/triangle"
                    android:rotation="180" />

                <ImageView
                    android:id="@+id/logo_IV"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_below="@id/bubble_1_RL"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_launcher1" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/message_2_RL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="16dp"
                android:visibility="gone"
                tools:visibility="visible">

                <RelativeLayout
                    android:id="@+id/bubble_2_RL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:background="@android:color/white"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/description_2_TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contest_details_2"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                </RelativeLayout>

                <View
                    android:id="@+id/triangle_2_View"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@id/bubble_2_RL"
                    android:layout_toRightOf="@id/bubble_2_RL"
                    android:background="@drawable/triangle"
                    android:rotation="90" />

            </RelativeLayout>

        </RelativeLayout>

    </FrameLayout>

</ScrollView>